# CS50-Final-Project

galeeza/: README.md  package-lock.json  pyproject.toml
galeeza/galeeza/: app.py  galeeza_db.sql  helpers.py
galeeza/galeeza/static/: style.css
galeeza/galeeza/static/js/: script.js  scriptPlan.js  scriptPref.js
galeeza/galeeza/templates/: apology.html  eachPlan.html  index.html  layout.html  login.html  plan.html  preferences.html  profile.html  signup.html
